# WassersteinProjEstimatorOnS1

./: .gitignore  Agents.md  LICENSE.md  README.md  ThesisComputing.pem  pyproject.toml  run.sh
data/: 20241206023509_x1.npy  20241206023509_x2.npy  20241206023530_x1.npy  20241206023530_x2.npy  ex10_model_misspecification2_MSE.csv  ex10_model_misspecification_MSE.csv  ex10_model_misspecification_MSE.txt  ex9_ss_vonmises_MSE.csv  time_comparison.csv  実験1.csv  実験1.xlsx  実験6.txt  実験6.xlsx  実験7.txt  実験7_再実験.txt  実験8.txt  実験9.csv  実験9.txt
data/csv_data/: time_comparison.csv
data/model_misspecification/: ex10_WC_vM.csv  ex10_WC_vM.tex  ex10_vM_WC.csv  ex10_vM_WC.tex
data/ss_vonmises_MSE/: ex9.tex  ex95.tex  ex95changelambda.csv
data/vonmises_MSE/: ex6.tex  ex65_MSE_kappa_change.csv
data/vonmises_mix/: ex85.tex
data/wrapcauchy_MSE/: ex7_wrapcauchy_MSE.csv
docs/: ai_guidelines.md  compare_vM_WC.html  quantile_sampling_comparison.md  referee_r3.md  wrapped_cauchy_mle_comparison.md
docs/calc_dists/: calc_dists.tex  calc_dists_short.tex
src/: calc_w_dist.py  calc_w_dist_disc_disc.py  main.py  param_opt_disc_kinji2.py  plot_jikken1.py  pram_opt_disc_kinji.py  vonmises_MLE.py
src/calc_semidiscrete_W_dist/: method1.py  method2.py
src/cauchy/: fisher.py  (+4 more)
verification/: calc_w_dist_disc_disc.py  quantile_sampling_comparison.py  verify_distances.py  verify_vonmises_loss_surface.py  verify_vonmises_w1_estimation.py  verify_vonmises_w2_estimation.py  verify_wrapped_cauchy_estimation.py  verify_wrapped_cauchy_loss_surface.py  vonmises_cdf_test.py  wrapcauchy_test.py
(+80 files in other folders)
