[tool.poetry]
name = "todaib4thesis"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
POT = "^0.9.4"
scipy = "^1.15.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
parfor = "^2025.1.0"
ray = "^2.46.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
