[project]
name = "todaib4thesis"
version = "0.1.0"
description = "python code for https://arxiv.org/abs/2510.18367"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "parfor>=2025.1.0",
    "pot>=0.9.6.post1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[tool.ruff]
exclude = [".venv"]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

